// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toast /> should be auto dismissable 1`] = `
<div>
  <div
    class="junipero toasts"
  >
    <div
      class="junipero toast"
      index="1"
    >
      Content
      <div
        class="countdown"
        style="animation-duration: 100ms; animation-play-state: running;"
      />
    </div>
  </div>
</div>
`;

exports[`<Toast /> should be auto dismissable 2`] = `
<div>
  <div
    class="junipero toasts"
  />
</div>
`;

exports[`<Toast /> should render 1`] = `
<div>
  <div
    class="junipero toast"
  >
    Content
  </div>
</div>
`;
